Spring-boot 3.1 update
- update spring-boot (3.0.13 -> 3.1.12)
- upgrade eclipse persistence (3.0.1 -> 4.0.6)
- bump snapshot version to 1.16.2-SNAPSHOT

Issue-ID: AAI-4162
Change-Id: I6988f36c00a0e8a9e9e32006b86ff286479ba685
Signed-off-by: Fiete Ostkamp <Fiete.Ostkamp@telekom.de>